# html-to-docx2

./: .eslintrc.json  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .release-it.json  DEPENDENCIES.md  FileComparisonDiffReport.txt  PROMPT.md  README.md  SECURITY.md  TS6_COMPATIBILITY.md  all_files_content.txt  bench.js  compare_docx_new.py  debug-error.ts  evaluate-optimizations.ts  files_to_fix.md  files_to_fix_01.md  files_to_fix_02.md  files_to_fix_03.md  files_to_fix_04.md  files_to_fix_05.md  files_to_fix_06.md  files_to_fix_07.md  files_to_fix_08.md  files_to_fix_09.md  files_to_fix_10.md  files_to_fix_11.md  files_to_fix_12.md  files_to_fix_13.md  filtered_analysis.txt  fix-for-in-return.ts  fix_final.js  fix_manual.py  fix_regex.cjs  fix_regex.js  fix_regex.py  fix_regex2.cjs  (+65 more)
.github/: DOCX_DIFF_BADGE.md  FUNDING.yml  dependabot.yml
.husky/: commit-msg
.jules/: bolt.md  chisel.md  sentinel.md  tide.md
.ralph/: current-events  current-loop-id  events-20260308-214011.jsonl  history.jsonl
.sonda/: sonda_0.html  sonda_1.html  sonda_2.html  sonda_3.html
api-surface/: browser.rollup.d.ts  node.rollup.d.ts
attempts/: attempt_10.py  attempt_1_copy.py  attempt_1_fixed.py  attempt_2_copy.py  attempt_2_fixed.py  attempt_2_pro_changes.py  attempt_2_pro_new.py  attempt_3_old_1.py  attempt_4.py  attempt_4_crabbit_enhanced.py  attempt_5_crabbit_1.py  attempt_6_crabbit_2.py  attempt_7.py  attempt_8.py  attempt_9.py  attempt_9_pro_new.py  attempt_codex_1.py  attempt_codex_2.py  attempt_codex_3.py  attempt_codex_4.py  attempt_gemini.py  (+2 more)
(+470 files in other folders)
