[project]
name = "html-to-docx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.4",
    "diff-match-patch>=20241021",
    "graphtage>=0.3.1",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "xmldiff>=2.7.0",
]
