[project]
name = "redline_docx"
version = "0.1.0"
description = "A tool to compare two .docx files and generate a redlined version with tracked changes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphtage>=0.3.1",
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1",
    "xmldiff>=2.7.0",
]

[tool.setuptools]
packages = ["redline_docx"]
